--- a/2_chessboard/my_chessboard_styles.css
+++ b/2_chessboard/my_chessboard_styles.css
@@ -18,3 +18,23 @@ Note that I've included the background image for the page in this folder, "grey.
 Write your CSS rules below.
 
 */
+
+body {
+  background-image: url("grey.png");
+}
+
+.board {
+  border: thick teal solid;
+  margin: 30px auto;
+  font-size: 50px;
+  color: orange;
+  height: 50%;
+  width: 50%;
+  text-align: center;
+  text-shadow: 1px 1px 1px black;
+
+}
+
+.dark_square {
+  background-color: teal;
+}
